--- a/cmdline_frame.html
+++ b/cmdline_frame.html
@@ -18,6 +18,7 @@
         <script src="content_scripts/hud.js"></script>
         <script src="content_scripts/visual.js"></script>
         <script src="content_scripts/command.js"></script>
+        <script src="content_scripts/command_execute.js"></script>
         <script src="content_scripts/scroll.js"></script>
         <script src="content_scripts/search.js"></script>
         <script src="content_scripts/frames.js"></script>
