can regiter self script

--- a/pages/options.html
+++ b/pages/options.html
@@ -81,7 +81,7 @@
                             EvalText
                         </td>
                         <td class="options-right">
-                            <textarea id="evalText" name="css"></textarea>
+                            <textarea id="eval_text"></textarea>
                         </td>
                     </tr>
                 </table>
