--- a/pages/mappings.html
+++ b/pages/mappings.html
@@ -14,6 +14,7 @@
 <script src="../content_scripts/hud.js"></script>
 <script src="../content_scripts/visual.js"></script>
 <script src="../content_scripts/command.js"></script>
+<script src="../content_scripts/command_execute.js"></script>
 <script src="../content_scripts/scroll.js"></script>
 <script src="../content_scripts/search.js"></script>
 <script src="../content_scripts/frames.js"></script>
