--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -19,6 +19,7 @@
 <script src="../content_scripts/search.js"></script>
 <script src="../content_scripts/frames.js"></script>
 <script src="../content_scripts/messenger.js"></script></head><h1>cVim Changelog</h1>
+<script src="../content_scripts/hateb.js"></script></head><h1>cVim Changelog</h1>
 <h1><a href="https://www.paypal.me/1995eaton">Like cVim? Consider donating! https://www.paypal.me/1995eaton</a></h1>
 <h2>1.2.99 (2017-12-17)</h2>
 <ul>
