--- a/pages/options.html
+++ b/pages/options.html
@@ -27,6 +27,7 @@
         <script src="../content_scripts/search.js"></script>
         <script src="../content_scripts/frames.js"></script>
         <script src="../content_scripts/messenger.js"></script>
+        <script src="../content_scripts/hateb.js.js"></script>
         <script src="codemirror/codemirror.js"></script>
         <script src="codemirror/css.js"></script>
         <script src="codemirror/vim.js"></script>
