--- a/cmdline_frame.html
+++ b/cmdline_frame.html
@@ -24,6 +24,7 @@
         <script src="content_scripts/frames.js"></script>
         <script src="content_scripts/messenger.js"></script>
         <script src="content_scripts/hateb.js"></script>
+        <script src="content_scripts/local.js"></script>
         <link rel="stylesheet" href="content_scripts/main.css">
     </head>
     <body>
