remove disable cvim on this domain menu

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -58,7 +58,7 @@ a {
     </head>
     <body>
         <a href="#"><div id="pause">Disable cVim</div></a>
-        <a href="#"><div id="blacklist">Disable cVim on this domain</div></a>
+        <!-- <a href="#"><div id="blacklist">Disable cVim on this domain</div></a> -->
         <a href="#"><div id="settings">Settings</div></a>
     </body>
     <script src="popup.js"></script>
